# ikfast_plugin_load_test

./: CMakeLists.txt  package.xml
src/: IKFast_loader.cpp  ikfast_kinematics_plugin.h
