<?xml version="1.0"?>
<package>
  <name>ikfast_plugin_load_test</name>
  <version>0.0.0</version>
  <description>The ikfast_plugin_load_test package</description>

  <maintainer email="josh@todo.todo">josh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
